--- a/_attachments/index.html
+++ b/_attachments/index.html
@@ -1,31 +1,66 @@
 <!DOCTYPE html>
-<html lang="en" class="graphColor">
+<html lang="en">
     <head>
-        <meta name="apple-mobile-web-app-capable" content="yes"/>
-        <meta name="viewport" content="user-scalable=no,width=640"/>
-
+        <!--<meta name="viewport" content="user-scalable=no,width=640"/>-->
+        <!--<link rel="stylesheet" href="css/reset.css" type="text/css">
+        <link rel="stylesheet" href="css/main.css" type="text/css">-->
+        <!--<meta name="apple-mobile-web-app-capable" content="yes"/>-->
         <title>toiweb</title>
 
-        <link rel="stylesheet" href="css/reset.css" type="text/css">
-        <link rel="stylesheet" href="css/main.css" type="text/css">
+        <meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1"/>
+
+        <link rel="stylesheet" href="vendor/couchapp/jquery.mobile-1.0.css"/>
 
         <script src="vendor/couchapp/loader.js" type="text/javascript"></script>
-
         <script src="js/util.js" type="text/javascript"></script>
         <script src="js/main.js" type="text/javascript"></script>
 
         <script type="text/javascript">
+
         </script>
     </head>
 
 <body>
-    <div id="inputPane">
-        <textarea id="input" rows="4" cols="40"></textarea>
-        <input id="filter"/>
-    </div>
-    <br/>
-    <h2 id="feedback1"></h2>
-    <h2 id="feedback2"></h2>
-    <p id="feedback3"></p>
+    <div data-role="page" id="input" data-title="toiweb">
+        <div data-role="header">
+            <h1>input</h1>
+        </div><!-- /header -->
+        <div data-role="content">
+            <div data-role="fieldcontain">
+                <label for="textarea1">textarea1</label>
+                <textarea name="textarea1" id="textarea1"></textarea>
+            </div><!-- /fieldcontain -->
+        </div><!-- /content -->
+        <div data-role="footer" data-id="foot" data-position="fixed">
+            <div data-role="navbar">
+                <ul>
+                    <li><a href="#input" class="ui-btn-active ui-state-persist">input</a></li>
+                    <li><a href="#query">query</a></li>
+                </ul>
+            </div><!-- /navbar -->
+        </div><!-- /footer -->
+    </div><!-- /page -->
+
+    <div data-role="page" id="query" data-title="toiweb">
+        <div data-role="header">
+            <h1>query</h1>
+        </div><!-- /header -->
+        <div data-role="content">
+            <div data-role="fieldcontain">
+                <label for="textarea2">textarea2</label>
+                <textarea name="textarea2" id="textarea2"></textarea>
+            </div><!-- /fieldcontain -->
+            <p id="feedback1">feedback1</p>
+        </div><!-- /content -->
+        <div data-role="footer" data-id="foot" data-position="fixed">
+            <div data-role="navbar">
+                <ul>
+                    <li><a href="#input">input</a></li>
+                    <li><a href="#query" class="ui-btn-active ui-state-persist">query</a></li>
+                </ul>
+            </div><!-- /navbar -->
+        </div><!-- /footer -->
+    </div><!-- /page -->
 </body>
 </html>
